[tool.poetry]
name = "module-6-regaruzianto"
version = "0.1.0"
description = ""
authors = ["regaruzianto <regaruzianto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flasgger = "^0.9.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
